--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.8",
     "@astrojs/check": "^0.9.3",
+    "astro": "^4.15.8",
+    "newt-client-js": "^3.3.5",
     "typescript": "^5.6.2"
   }
 }
